...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MySetsActivity">

    <TextView
        android:id="@+id/textViewWelcomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:text="@string/welcome"
...
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeUser" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUserSets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:isScrollContainer="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
...
